# deepsel

./: .gitignore  .pypirc.example  AGENTS.md  CLAUDE.md  CONTRIBUTING.md  MANIFEST.in  Makefile  PUBLISHING.md  README.md  db.py  db_manager.py  main.py  package-lock.json  package.json  pyproject.toml  settings.py
.claude/skills/: publish.md
.github/workflows/: codex-review.yml  publish-admin.yml  publish.yml  test-admin.yml  test-e2e.yml  test.yml
client/: astro.config.mjs  package.json  postcss.config.js  tailwind.config.js
client/src/: middleware.ts  themes.ts
deepsel/: deps.py
deepsel/apps/: conftest.py
deepsel/auth/: __init__.py  current_org.py  get_current_user.py  google_oauth.py  keycloak_oauth.py  openrouter_oauth.py  resolve_login_organization.py  saml.py  service.py  session.py  types.py
deepsel/orm/: __init__.py  activity_mixin.py  attachment_mixin.py  base_model.py  cron_mixin.py  email_template_mixin.py  mixin.py  organization_mixin.py  types.py  user_mixin.py
deepsel/sqlalchemy/: __init__.py  db_manager.py
deepsel/types/: attachment.py  locale.py
deepsel/utils/: __init__.py  api_router.py  attachment.py  check_delete_cascade.py  crud_router.py  crypto.py  filename.py  generate_crud_schemas.py  get_class_info.py  graphql_schema.py  init_graphql.py  install_apps.py  models_pool.py  project_root.py  send_email.py  server_events.py  stock_image.py  storage.py  technical_fields.py
examples/: auth_usage.py  basic_usage.py
scripts/: ensure-local-packages.js
tests/: conftest.py  test_activity_mixin.py  test_attachment_mixin.py  test_attachment_utils.py  test_auth_service.py  test_check_delete_cascade.py  test_cron_mixin.py  test_crud_router.py  test_crypto.py  test_current_org.py  test_db_manager.py  test_email_doser.py  test_email_template_mixin.py  test_filename.py  test_generate_crud_schemas.py  test_get_class_info.py  test_get_field_info.py  test_get_relationships.py  test_google_oauth.py  test_graphql_schema.py  test_install_apps.py  test_migration_utils.py  test_mixin.py  test_models_pool.py  test_openrouter_oauth.py  test_organization_mixin.py  test_saml_service.py  test_secret_utils.py  test_send_email.py  test_session.py  test_stock_image.py  test_storage.py  test_text_cases.py  test_user_mixin.py
tests/e2e/: global-setup.ts  global-teardown.ts  package.json  (+1 more)
(+202 files in other folders)
