[build-system]
requires = ["setuptools>=80.9.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "deepsel"
version = "0.10.6"
description = "Database utilities, ORM framework, and authentication for SQLAlchemy, FastAPI Python applications"
readme = "README.md"
authors = [
    {name = "Deepsel Inc.", email = "info@deepsel.com"}
]
license = {text = "MIT"}
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Topic :: Database",
    "Framework :: FastAPI",
    "Framework :: Pydantic",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
keywords = ["sqlalchemy", "database", "migration", "schema", "postgres", "deepsel", "orm", "crud"]
requires-python = ">=3.12"
dependencies = [
    "sqlalchemy>=2.0.30",
    "fastapi>=0.100.0",
    "pydantic>=2.0.0",
    "python-dateutil>=2.8.0",
    "fastapi-mail>=1.0.0",
    "httpx>=0.24.0",
    "passlib[bcrypt]>=1.7.0",
]

[project.optional-dependencies]
graphql = [
    "strawberry-graphql[fastapi]>=0.200.0",
]
s3 = [
    "boto3>=1.26.0",
]
azure = [
    "azure-storage-blob>=12.0.0",
]
storage = [
    "boto3>=1.26.0",
    "azure-storage-blob>=12.0.0",
]
auth = [
    "PyJWT>=2.0.0",
    "cryptography>=3.0",
    "pyotp>=2.0.0",
]
oauth = [
    "authlib>=1.0.0",
]
saml = [
    "python3-saml>=1.14.0",
]
dev = [
    "pytest>=9.0.2",
    "pytest-cov>=7.0.0",
    "black>=26.1.0",
    "flake8>=7.2.0",
    "bandit>=1.8.0",
    "build>=0.10.0",
    "twine>=6.2.0",
    "testcontainers[postgres]>=4.0.0",
    "psycopg[binary]>=3.1.0",
]

[project.urls]
Homepage = "https://github.com/DeepselSystems/deepsel"
Repository = "https://github.com/DeepselSystems/deepsel"
Issues = "https://github.com/DeepselSystems/deepsel/issues"

[tool.setuptools.packages.find]
where = ["."]
include = ["deepsel*"]
exclude = ["tests*", "examples*"]

[tool.setuptools.package-data]
deepsel = ["py.typed"]

[tool.black]
line-length = 88
target-version = ['py312']

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = "-v --cov=deepsel --cov-report=term-missing"
